# streamingReco

./: CMakeLists.txt  README.md  SConstruct
src/libraries/: CMakeLists.txt
src/libraries/DAQ/: CMakeLists.txt  JEventSource_PTFile.cc  JEventSource_PTFile.h  JEventSource_TxtFile.h  TridasEvent.h  chronoTypeDef.h  fa250VTPMode7Hit.h  fa250VTPMode7Hit_factory.cc  faWaveboardHit.h  faWaveboardHit_factory.cc
src/libraries/FT/: CMakeLists.txt
src/libraries/FT/hdbscandir/: AllMetrics.cc
src/libraries/HallD/: CMakeLists.txt  EIC_5x5CalCluster.cc  EIC_5x5CalCluster.h  EIC_5x5CalCluster_factory_hdbscan.cc  EIC_5x5CalCluster_factory_hdbscan.h  HallDCalHit_factory.cc  JFactoryGenerator_HallD.h
src/libraries/TT/: CMakeLists.txt  TranslationTable.cc  TranslationTable.h
src/libraries/system/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/EIC_3x3/: CMakeLists.txt  EIC_3x3.cc  EIC_3x3Processor.cc  EIC_3x3Processor.h
src/plugins/EIC_3x3_cosmics_trigger/: CMakeLists.txt  EIC3x3CalTrack.h  EIC3x3CalTrack_Factory.cc  EIC3x3CalTrack_Factory.h  TriggerDecision_EIC3x3Cal_cosmics_factory.cc  TriggerDecision_EIC3x3Cal_cosmics_factory.h
src/plugins/EIC_5x5/: CMakeLists.txt  EIC_5x5.cc  EIC_5x5Processor.cc  EIC_5x5Processor.h
src/plugins/EIC_5x5_beam_trigger/: CMakeLists.txt  JTestTrackData.csv  TriggerDecision_EIC_5x5_beam_factory.cc  TriggerDecision_EIC_5x5_beam_factory.h  TriggerDecision_EIC_5x5l_beam_factory.cc
src/plugins/EIC_5x5_cluster_trigger/: CMakeLists.txt  TriggerDecision_EIC_5x5_cluster_factory.cc  TriggerDecision_EIC_5x5_cluster_factory.h
src/plugins/EIC_5x5_cosmics_trigger/: CMakeLists.txt  EIC5x5CalTrack.h  EIC5x5CalTrack_Factory.cc  EIC5x5CalTrack_Factory.h  TriggerDecision_EIC5x5Cal_cosmics_factory.cc  TriggerDecision_EIC5x5Cal_cosmics_factory.h
src/plugins/EIC_5x5_display/: CMakeLists.txt  EIC_5x5_display.cc
src/plugins/HallDCal_beam_trigger/: CMakeLists.txt  TriggerDecision_HallDCal_beam_factory.cc
src/plugins/HallDCal_cosmics/: CMakeLists.txt  HallDCal_cosmicsProcessor.cc  HallDCal_cosmicsProcessor.h
src/plugins/HallDCal_cosmics_trigger/: CMakeLists.txt  HallDCalTrack_Factory.cc
src/plugins/PTFileSource/: CMakeLists.txt  PTFileSource.cc
src/plugins/SRBase/: CMakeLists.txt  SRBase.cc
src/plugins/TriggerMetadata/: CMakeLists.txt
src/programs/streamingReco/: CMakeLists.txt  streamingReco.cc
