cmake_minimum_required (VERSION 3.16)

add_subdirectory(EIC_3x3_cosmics_trigger)
add_subdirectory(EIC_3x3)
add_subdirectory(EIC_5x5_cosmics_trigger)
add_subdirectory(EIC_5x5)
add_subdirectory(HallDCal_beam_trigger)
add_subdirectory(HallDCal_cosmics)
add_subdirectory(HallDCal_cosmics_trigger)
add_subdirectory(PTFileSource)
add_subdirectory(TriggerMetadata)


